--- a/conf_postgres/pg_hba.conf
+++ b/conf_postgres/pg_hba.conf
@@ -82,9 +82,9 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-# local   all             all                                     trust
+local   all             all                                     trust
 # IPv4 local connections:
-# host    all             all             127.0.0.1/32            trust
+host    all             all             0.0.0.0/0            trust
 # IPv6 local connections:
 # host    all             all             ::1/128                 trust
 # Allow replication connections from localhost, by a user with the
@@ -92,6 +92,3 @@
 #local   replication     postgres                                trust
 #host    replication     postgres        127.0.0.1/32            trust
 #host    replication     postgres        ::1/128                 trust
-
-# Most open, however insecure. For local developer use only
-host all all 0.0.0.0/0 trust
