Reconfigure docker files

--- a/conf_postgres/postgresql.conf
+++ b/conf_postgres/postgresql.conf
@@ -40,7 +40,7 @@
 
 #data_directory = 'ConfigDir'		# use data in another directory
 					# (change requires restart)
-#hba_file = 'ConfigDir/pg_hba.conf'	# host-based authentication file
+hba_file = '/app/pg_hba.conf'	# host-based authentication file
 					# (change requires restart)
 #ident_file = 'ConfigDir/pg_ident.conf'	# ident configuration file
 					# (change requires restart)
