--- a/Dockerfile-postgis
+++ b/Dockerfile-postgis
@@ -1,35 +1,57 @@
 FROM postgres:9.4.7
 
+RUN mkdir -p /app
+
 ADD ./conf_postgres/pg.development.sql /app/pg.development.sql
+
+# IPv6 listener disabled in pg_hba.conf
 ADD ./conf_postgres/pg_hba.conf /app/pg_hba.conf
+
+# listen_addresses = '*' set in postgresql.conf
 ADD ./conf_postgres/postgresql.conf /app/postgresql.conf
 
-RUN mkdir -p /app
+#RUN chmod -R 755 /app
+
+# postgres will not start with global read permissions set
+#RUN chmod -R 700 /var/lib/postgresql/data
+
+# add keys may no longer be necessary but keeping in for now
 RUN apt-get update && apt-get install -y \
     sudo \
     wget
 RUN sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt trusty-pgdg main" >> /etc/apt/sources.list'
 RUN wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
-RUN apt-get update && apt-get install -y \
+
+RUN apt-get install -y \
     postgresql-9.4-postgis-2.1 \
     pgadmin3 \
     postgresql-contrib-9.4
 RUN apt-get clean
 RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 RUN cp /docker-entrypoint.sh /usr/local/bin/
 
-# TODO bunch of things that don't work:
-#RUN echo "listen_addresses = '*' >> /var/lib/postgresql/data/postgresql.conf"
+#RUN chmod 755 /usr/local/bin/docker-entrypoint.sh
 
-#RUN yes | cp -f /app/pg_hba.conf /var/lib/postgresql/data/pg_hba.conf
-#RUN yes | cp -f /app/postgresql.conf /var/lib/postgresql/data/postgresql.conf
+RUN /etc/init.d/postgresql start
 
-#RUN chmod 700 /var/lib/postgresql/data
-#RUN chown -R postgres /var/lib/postgresql/data
+EXPOSE 5432/tcp
 
-#EXPOSE 5432
-#ENTRYPOINT ["docker-entrypoint.sh"]
+# enables USER postgres - https://success.docker.com/article/use-a-script-to-initialize-stateful-container-data
+ENTRYPOINT ["docker-entrypoint.sh"]
 
-#USER postgres
+## open up listening to be most permissive
+RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf
+
 #
-#CMD ["/usr/lib/postgresql/9.4/bin/postgres", "-c", "config_file=/app/postgresql.conf"]
+## And add ``listen_addresses`` to ``/etc/postgresql/9.3/main/postgresql.conf``
+#RUN echo "listen_addresses='*'" >> /var/lib/postgresql/data/postgresql.conf
+#
+## Add VOLUMEs to allow backup of config, logs and databases
+#VOLUME  ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
+#
+## Set the default command to run when starting the container
+USER postgres
+
+# /var/lib/postgresql/data/postgresql.conf and pg_hba.conf seem to regenerate so copying over them does not work
+CMD ["/usr/lib/postgresql/9.4/bin/postgres", "-D", "/var/lib/postgresql/data", "-c", "config_file=/app/postgresql.conf"]
