--- a/Dockerfile-postgis
+++ b/Dockerfile-postgis
@@ -10,8 +10,8 @@ ADD ./conf_postgres/pg_hba.conf /app/pg_hba.conf
 # listen_addresses = '*' set in postgresql.conf
 ADD ./conf_postgres/postgresql.conf /app/postgresql.conf
 
-# add keys may no longer be necessary but keeping in for now also avoid apt-utils warning
-RUN apt-get update && apt-get install -y --no-install-recommends apt-utils \
+# add keys may no longer be necessary
+RUN apt-get update && apt-get install -y \
     sudo \
     wget
 RUN sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt trusty-pgdg main" >> /etc/apt/sources.list'
