--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Temporary for alternate dev setup
 conf_postgres
 conf_solr
+Dockerfile-defaultworker
+Dockerfile-hydroshare
+Dockerfile-postgis
+Dockerfile-solr
 
 # HydroShare Custom
 *.pyc
