--- a/Dockerfile-irods
+++ b/Dockerfile-irods
@@ -1,3 +1,5 @@
-FROM mjstealey/docker-irods-icat
+FROM mjstealey/docker-irods-icat:4.1.8
+
+RUN apt-get update && apt-get install -y
 
 CMD ["/bin/bash"]
