--- a/alternate-compose.yml
+++ b/alternate-compose.yml
@@ -2,176 +2,247 @@ version: '3'
 #TODO clocks and timezones
 #TODO add devops admin network tools
 services:
-  irods-data:
+  data.local.org:
     build:
       context: .
       dockerfile: Dockerfile-data-irods
     container_name: data.local.org
     hostname: data.local.org
-    volumes:
-      - irodsvault1vol:/var/lib/irods/iRODS/Vault
-      - irodsdata1vol:/var/lib/postgresql/data
+    links:
+      - users.local.org:users.local.org
+    ports:
+      - "1247"
+    environment:
+      SHARED_NEG_KEY: 'hydroshareZonehydroshareuserZone'
+      USE_IRODS: 'True'
+      IRODS_ROOT: '/tmp'
+      IRODS_ICOMMANDS_PATH: '/usr/bin'
+      IRODS_HOST: 'data.local.org'
+      IRODS_PORT: '1247'
+      IRODS_DEFAULT_RESOURCE: 'hydroshareReplResc'
+      IRODS_HOME_COLLECTION: '/hydroshareZone/home/wwwHydroProxy'
+      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy'
+      IRODS_ZONE: 'hydroshareZone'
+      IRODS_USERNAME: 'wwwHydroProxy'
+      IRODS_AUTH: 'wwwHydroProxy'
+      IRODS_GLOBAL_SESSION: 'True'
+      REMOTE_USE_IRODS: 'True'
+      HS_USER_ZONE_HOST: 'users.local.org'
+      HS_USER_ZONE_PROXY_USER: 'hsuserproxy'
+      HS_USER_ZONE_PROXY_USER_PWD: 'hsuserproxy'
+      HS_USER_ZONE_PROXY_USER_CREATE_USER_CMD: '/home/hsuserproxy/create_user.sh'
+      HS_USER_ZONE_PROXY_USER_DELETE_USER_CMD: '/home/hsuserproxy/delete_user.sh'
+      HS_LOCAL_PROXY_USER_IN_FED_ZONE: 'localHydroProxy'
+      HS_WWW_IRODS_PROXY_USER: 'wwwHydroProxy'
+      HS_WWW_IRODS_PROXY_USER_PWD: 'wwwHydroProxy'
+      HS_WWW_IRODS_HOST: 'data.local.org'
+      HS_IRODS_LOCAL_ZONE_DEF_RES: 'hydroshareLocalResc'
+      HS_WWW_IRODS_ZONE: 'hydroshareZone'
+      HS_USER_IRODS_ZONE: 'hydroshareuserZone'
+      IRODS_ZONE_NAME: 'hydroshareZone'
+      IRODS_SERVER_ZONE_KEY: 'hydroshareZone_KEY'
+      IRODS_DATABASE_SERVER_HOSTNAME: 'data.local.org'
+      IRODS_USER_NAME: 'rods'
+      IRODS_PASSWORD: 'rods'
+#    volumes:
+#      - irodsvault1vol:/var/lib/irods/iRODS/Vault
+#      - irodsdata1vol:/var/lib/postgresql/data
 #      - .:/hydroshare
     stdin_open: true
     tty: true
-  irods-users:
+  users.local.org:
     build:
       context: .
       dockerfile: Dockerfile-users-irods
     container_name: users.local.org
     hostname: users.local.org
-    volumes:
-      - irodsvault2vol:/var/lib/irods/iRODS/Vault
-      - irodsdata2vol:/var/lib/postgresql/data
+    ports:
+      - "1247"
+      - "22"
+    environment:
+      SHARED_NEG_KEY: 'hydroshareZonehydroshareuserZone'
+      USE_IRODS: 'True'
+      IRODS_ROOT: '/tmp'
+      IRODS_ICOMMANDS_PATH: '/usr/bin'
+      IRODS_HOST: 'users.local.org'
+      IRODS_PORT: '1247'
+      IRODS_DEFAULT_RESOURCE: 'hydroshareReplResc'
+      IRODS_HOME_COLLECTION: '/hydroshareZone/home/wwwHydroProxy'
+      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy'
+      IRODS_ZONE: 'hydroshareZone'
+      IRODS_USERNAME: 'wwwHydroProxy'
+      IRODS_AUTH: 'wwwHydroProxy'
+      IRODS_GLOBAL_SESSION: 'True'
+      REMOTE_USE_IRODS: 'True'
+      HS_USER_ZONE_HOST: 'users.local.org'
+      HS_USER_ZONE_PROXY_USER: 'hsuserproxy'
+      HS_USER_ZONE_PROXY_USER_PWD: 'hsuserproxy'
+      HS_USER_ZONE_PROXY_USER_CREATE_USER_CMD: '/home/hsuserproxy/create_user.sh'
+      HS_USER_ZONE_PROXY_USER_DELETE_USER_CMD: '/home/hsuserproxy/delete_user.sh'
+      HS_LOCAL_PROXY_USER_IN_FED_ZONE: 'localHydroProxy'
+      HS_WWW_IRODS_PROXY_USER: 'wwwHydroProxy'
+      HS_WWW_IRODS_PROXY_USER_PWD: 'wwwHydroProxy'
+      HS_WWW_IRODS_HOST: 'data.local.org'
+      HS_IRODS_LOCAL_ZONE_DEF_RES: 'hydroshareLocalResc'
+      HS_WWW_IRODS_ZONE: 'hydroshareZone'
+      HS_USER_IRODS_ZONE: 'hydroshareuserZone'
+      IRODS_ZONE_NAME: 'hydroshareuserZone'
+      IRODS_SERVER_ZONE_KEY: 'hydroshareuserZone_KEY'
+      IRODS_DATABASE_SERVER_HOSTNAME: 'users.local.org'
+      IRODS_USER_NAME: 'rods'
+      IRODS_PASSWORD: 'rods'
+#    volumes:
+#      - irodsvault2vol:/var/lib/irods/iRODS/Vault
+#      - irodsdata2vol:/var/lib/postgresql/data
 #        - .:/hydroshare
     stdin_open: true
     tty: true
-  postgis:
-    build:
-      context: .
-      dockerfile: Dockerfile-postgis
-    container_name: postgis
-    hostname: postgis
-    volumes:
-      - "pgdatavol:/var/lib/postgresql/data"
-    ports:
-      - "54322:5432"
-    stdin_open: true
-    tty: true
-  rabbitmq:
-    image: rabbitmq:3.5
-    container_name: rabbitmq
-  redis:
-    image: redis:2.8
-    container_name: redis
-    stdin_open: true
-    tty: true
-  solr:
-    build:
-      context: .
-      dockerfile: Dockerfile-solr
-    container_name: solr
-    hostname: solr
-    ports:
-      - "8983:8983"
-    # This line is uncommented if $USE_LOCAL_IRODS = true per hsctrl
-    # - "8983"
-    stdin_open: true
-    tty: true
-  hydroshare:
-    build:
-      context: .
-      dockerfile: Dockerfile-hydroshare
-    container_name: hydroshare
-    hostname: hydroshare
-    devices:
-      - "/dev/fuse"
-    privileged: true
-    environment:
-      POSTGIS_HOST: postgis
-      POSTGIS_PORT: 5432
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      POSTGIS_PASSWORD: postgres
-      POSTGIS_DB: postgres
-      POSTGIS_USER: postgres
-      PGPASSWORD: postgres
-      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
-      SOLR_PORT_8983_TCP_ADDR: solr
-      SOLR_HOST: solr
-      TMP: /hs_tmp
-      POSTGIS_PORT_5432_TCP_ADDR: postgis
-      HS_PATH: ${PWD}
-      PYTHONPATH: /hydroshare
-      DJANGO_SETTINGS_MODULE: hydroshare.settings
-    volumes:
-      # hydroshare repository
-      - ".:/hydroshare"
-      # log files
-      - "${LOGDIR}:/hydroshare/log"
-      # shared location for gunicorn.sock between containers
-      - "/hs_tmp"
-      # temp directory shared with celery workers
-      - "/shared_tmp"
-      ## These two lines are actually active if $USE_LOCAL_IRODS = false: but can probably be removed entirely
-      ## These two lines are not present if $USE_LOCAL_IRODS = true
-      #- "/irods/hydroshare:/irods/hydroshare"
-      #- "/irods/hydroshare_vault:/irods/hydroshare_vault"
-    ports:
-      - "1338:2022"
-      - "8000:8000"
-      # this line is removed if irods $USE_LOCAL_IRODS = true not sure why
-      - "15001:15001"
-    links:
-      - postgis:postgis
-      - redis:redis
-      - solr:solr
-      - rabbitmq:rabbitmq
-      - irods-data
-      - irods-users
-    # This won't be necessary if irods is a container. Was just to have additional etc hosts entries for IPs of irods and the developer laptop or user IP I wonder if that is for whitelisting
-#    extra_hosts:
-#      - "IRODS_DATA_HOSTNAME:IRODS_DATA_IP"
-#      - "IRODS_USER_HOSTNAME:IRODS_USER_IP"
-    depends_on:
-      - postgis
-      - redis
-      - solr
-      - rabbitmq
-      - irods-data
-      - irods-users
-    stdin_open: true
-    tty: true
-  defaultworker:
-    # TODO https://docs.docker.com/compose/startup-order/
-    build:
-      context: .
-      dockerfile: Dockerfile-defaultworker
-    container_name: defaultworker
-    hostname: defaultworker
-    environment:
-      POSTGIS_HOST: postgis
-      POSTGIS_PORT: 5432
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      POSTGIS_PASSWORD: postgres
-      POSTGIS_DB: postgres
-      PGPASSWORD: postgres
-      C_FORCE_ROOT: 1
-      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
-      SOLR_PORT_8983_TCP_ADDR: solr
-      SOLR_HOST: solr
-      POSTGIS_PORT_5432_TCP_ADDR: postgis
-      HS_PATH: ${PWD}
-      PYTHONPATH: /hydroshare
-      DJANGO_SETTINGS_MODULE: hydroshare.settings
-    volumes:
-      - ".:/hydroshare"
-      - "${LOGDIR}:/hydroshare/log"
-    links:
-      - postgis:postgis
-      - redis:redis
-      - rabbitmq:rabbitmq
-      - irods-data
-      - irods-users
-#    extra_hosts:
-#      - "IRODS_DATA_HOSTNAME:IRODS_DATA_IP"
-#      - "IRODS_USER_HOSTNAME:IRODS_USER_IP"
-    depends_on:
-      - hydroshare
-      - postgis
-      - solr
-      - redis
-      - rabbitmq
-      - irods-data
-      - irods-users
-    stdin_open: true
-    tty: true
-
-# Docker Volumes https://docs.docker.com/storage/volumes/
-# tldr;
-# docker volume ps | grep pgdatavol
-# docker volume rm hydroshare_pgdatavol
+#  postgis:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile-postgis
+#    container_name: postgis
+#    hostname: postgis
+#    volumes:
+#      - "pgdatavol:/var/lib/postgresql/data"
+#    ports:
+#      - "54322:5432"
+#    stdin_open: true
+#    tty: true
+#  rabbitmq:
+#    image: rabbitmq:3.5
+#    container_name: rabbitmq
+#  redis:
+#    image: redis:2.8
+#    container_name: redis
+#    stdin_open: true
+#    tty: true
+#  solr:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile-solr
+#    container_name: solr
+#    hostname: solr
+#    ports:
+#      - "8983:8983"
+#    # This line is uncommented if $USE_LOCAL_IRODS = true per hsctrl
+#    # - "8983"
+#    stdin_open: true
+#    tty: true
+#  hydroshare:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile-hydroshare
+#    container_name: hydroshare
+#    hostname: hydroshare
+#    devices:
+#      - "/dev/fuse"
+#    privileged: true
+#    environment:
+#      POSTGIS_HOST: postgis
+#      POSTGIS_PORT: 5432
+#      REDIS_HOST: redis
+#      REDIS_PORT: 6379
+#      POSTGIS_PASSWORD: postgres
+#      POSTGIS_DB: postgres
+#      POSTGIS_USER: postgres
+#      PGPASSWORD: postgres
+#      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
+#      SOLR_PORT_8983_TCP_ADDR: solr
+#      SOLR_HOST: solr
+#      TMP: /hs_tmp
+#      POSTGIS_PORT_5432_TCP_ADDR: postgis
+#      HS_PATH: ${PWD}
+#      PYTHONPATH: /hydroshare
+#      DJANGO_SETTINGS_MODULE: hydroshare.settings
+#    volumes:
+#      # hydroshare repository
+#      - ".:/hydroshare"
+#      # log files
+#      - "${LOGDIR}:/hydroshare/log"
+#      # shared location for gunicorn.sock between containers
+#      - "/hs_tmp"
+#      # temp directory shared with celery workers
+#      - "/shared_tmp"
+#      ## These two lines are actually active if $USE_LOCAL_IRODS = false: but can probably be removed entirely
+#      ## These two lines are not present if $USE_LOCAL_IRODS = true
+#      #- "/irods/hydroshare:/irods/hydroshare"
+#      #- "/irods/hydroshare_vault:/irods/hydroshare_vault"
+#    ports:
+#      - "1338:2022"
+#      - "8000:8000"
+#      # this line is removed if irods $USE_LOCAL_IRODS = true not sure why
+#      - "15001:15001"
+#    links:
+#      - postgis:postgis
+#      - redis:redis
+#      - solr:solr
+#      - rabbitmq:rabbitmq
+#      - irods-data:irods-data
+#      - irods-users:irods-users
+#    # This won't be necessary if irods is a container. Was just to have additional etc hosts entries for IPs of irods and the developer laptop or user IP I wonder if that is for whitelisting
+##    extra_hosts:
+##      - "IRODS_DATA_HOSTNAME:IRODS_DATA_IP"
+##      - "IRODS_USER_HOSTNAME:IRODS_USER_IP"
+#    depends_on:
+#      - postgis
+#      - redis
+#      - solr
+#      - rabbitmq
+#      - irods-data
+#      - irods-users
+#    stdin_open: true
+#    tty: true
+#  defaultworker:
+#    # TODO https://docs.docker.com/compose/startup-order/
+#    build:
+#      context: .
+#      dockerfile: Dockerfile-defaultworker
+#    container_name: defaultworker
+#    hostname: defaultworker
+#    environment:
+#      POSTGIS_HOST: postgis
+#      POSTGIS_PORT: 5432
+#      REDIS_HOST: redis
+#      REDIS_PORT: 6379
+#      POSTGIS_PASSWORD: postgres
+#      POSTGIS_DB: postgres
+#      PGPASSWORD: postgres
+#      C_FORCE_ROOT: 1
+#      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
+#      SOLR_PORT_8983_TCP_ADDR: solr
+#      SOLR_HOST: solr
+#      POSTGIS_PORT_5432_TCP_ADDR: postgis
+#      HS_PATH: ${PWD}
+#      PYTHONPATH: /hydroshare
+#      DJANGO_SETTINGS_MODULE: hydroshare.settings
+#    volumes:
+#      - ".:/hydroshare"
+#      - "${LOGDIR}:/hydroshare/log"
+#    links:
+#      - postgis:postgis
+#      - redis:redis
+#      - rabbitmq:rabbitmq
+#      - irods-data:irods-data
+#      - irods-users:irods-users
+##    extra_hosts:
+##      - "IRODS_DATA_HOSTNAME:IRODS_DATA_IP"
+##      - "IRODS_USER_HOSTNAME:IRODS_USER_IP"
+#    depends_on:
+#      - hydroshare
+#      - postgis
+#      - solr
+#      - redis
+#      - rabbitmq
+#      - irods-data
+#      - irods-users
+#    stdin_open: true
+#    tty: true
+#
+## Docker Volumes https://docs.docker.com/storage/volumes/
+## tldr;
+## docker volume ps | grep pgdatavol
+## docker volume rm hydroshare_pgdatavol
 volumes:
   pgdatavol:
   irodsvault1vol:
