--- a/conf_irods/env-files/rods@.env
+++ b/conf_irods/env-files/rods@.env
@@ -1,5 +1,5 @@
-IRODS_HOST=172.19.0.3
+IRODS_HOST=
 IRODS_PORT=1247
 IRODS_USER_NAME=rods
-IRODS_ZONE_NAME=hydroshareZone
+IRODS_ZONE_NAME=
 IRODS_PASSWORD=rods
