--- a/Dockerfile-postgis
+++ b/Dockerfile-postgis
@@ -26,19 +26,26 @@ RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 EXPOSE 5432/tcp
 
-### TODO find permanent solution to reconcile mutually exclisive first-run setup and subsequently necessary docker-entrypoint.sh
-### COMMENT EVERYTHING BELOW THIS LINE FOR FIRST RUN TO INITIALIZE PGDATA THEN UNCOMMENT
+###TODO NEW STUFF:
 RUN cp /docker-entrypoint.sh /usr/local/bin/
+RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf && chown -R postgres /var/lib/postgresql/data/pg_hba.conf
+#CMD ["dbinit"] #gosu postgres initdb $POSTGRES_INITDB_ARGS
+#CMD ["marks_db_populate"]
+CMD ["docker-entrypoint.sh", "postgres"]
 
-# enables USER postgres - https://success.docker.com/article/use-a-script-to-initialize-stateful-container-data
-# potential bug with native intended script??? https://github.com/docker-library/postgres/issues/269
-ENTRYPOINT ["docker-entrypoint.sh"]
-
-## open up listening to be most permissive
-RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf
-
-### Set the default command to run when starting the container
-USER postgres
-
-## /var/lib/postgresql/data/postgresql.conf and pg_hba.conf seem to regenerate so copying over them does not work
-CMD ["/usr/lib/postgresql/9.4/bin/postgres", "-D", "/var/lib/postgresql/data", "-c", "config_file=/app/postgresql.conf"]
+#### TODO find permanent solution to reconcile mutually exclisive first-run setup and subsequently necessary docker-entrypoint.sh
+#### COMMENT EVERYTHING BELOW THIS LINE FOR FIRST RUN TO INITIALIZE PGDATA THEN UNCOMMENT
+#RUN cp /docker-entrypoint.sh /usr/local/bin/
+#
+## enables USER postgres - https://success.docker.com/article/use-a-script-to-initialize-stateful-container-data
+## potential bug with native intended script??? https://github.com/docker-library/postgres/issues/269
+#ENTRYPOINT ["docker-entrypoint.sh"]
+#
+### open up listening to be most permissive
+#RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf
+#
+#### Set the default command to run when starting the container
+#USER postgres
+#
+### /var/lib/postgresql/data/postgresql.conf and pg_hba.conf seem to regenerate so copying over them does not work
+#CMD ["/usr/lib/postgresql/9.4/bin/postgres", "-D", "/var/lib/postgresql/data", "-c", "config_file=/app/postgresql.conf"]
