--- a/alternate-compose.yml
+++ b/alternate-compose.yml
@@ -95,148 +95,141 @@ services:
 #        - .:/hydroshare
     stdin_open: true
     tty: true
-#  postgis:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile-postgis
-#    container_name: postgis
-#    hostname: postgis
-#    volumes:
-#      - "pgdatavol:/var/lib/postgresql/data"
-#    ports:
-#      - "54322:5432"
-#    stdin_open: true
-#    tty: true
-#  rabbitmq:
-#    image: rabbitmq:3.5
-#    container_name: rabbitmq
-#  redis:
-#    image: redis:2.8
-#    container_name: redis
-#    stdin_open: true
-#    tty: true
-#  solr:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile-solr
-#    container_name: solr
-#    hostname: solr
-#    ports:
-#      - "8983:8983"
-#    # This line is uncommented if $USE_LOCAL_IRODS = true per hsctrl
-#    # - "8983"
-#    stdin_open: true
-#    tty: true
-#  hydroshare:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile-hydroshare
-#    container_name: hydroshare
-#    hostname: hydroshare
-#    devices:
-#      - "/dev/fuse"
-#    privileged: true
-#    environment:
-#      POSTGIS_HOST: postgis
-#      POSTGIS_PORT: 5432
-#      REDIS_HOST: redis
-#      REDIS_PORT: 6379
-#      POSTGIS_PASSWORD: postgres
-#      POSTGIS_DB: postgres
-#      POSTGIS_USER: postgres
-#      PGPASSWORD: postgres
-#      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
-#      SOLR_PORT_8983_TCP_ADDR: solr
-#      SOLR_HOST: solr
-#      TMP: /hs_tmp
-#      POSTGIS_PORT_5432_TCP_ADDR: postgis
-#      HS_PATH: ${PWD}
-#      PYTHONPATH: /hydroshare
-#      DJANGO_SETTINGS_MODULE: hydroshare.settings
-#    volumes:
-#      # hydroshare repository
-#      - ".:/hydroshare"
-#      # log files
-#      - "${LOGDIR}:/hydroshare/log"
-#      # shared location for gunicorn.sock between containers
-#      - "/hs_tmp"
-#      # temp directory shared with celery workers
-#      - "/shared_tmp"
-#      ## These two lines are actually active if $USE_LOCAL_IRODS = false: but can probably be removed entirely
-#      ## These two lines are not present if $USE_LOCAL_IRODS = true
-#      #- "/irods/hydroshare:/irods/hydroshare"
-#      #- "/irods/hydroshare_vault:/irods/hydroshare_vault"
-#    ports:
-#      - "1338:2022"
-#      - "8000:8000"
-#      # this line is removed if irods $USE_LOCAL_IRODS = true not sure why
-#      - "15001:15001"
-#    links:
-#      - postgis:postgis
-#      - redis:redis
-#      - solr:solr
-#      - rabbitmq:rabbitmq
-##      - irods-data:irods-data
-##      - irods-users:irods-users
-#    # This won't be necessary if irods is a container. Was just to have additional etc hosts entries for IPs of irods and the developer laptop or user IP I wonder if that is for whitelisting
-##    extra_hosts:
-##      - "IRODS_DATA_HOSTNAME:IRODS_DATA_IP"
-##      - "IRODS_USER_HOSTNAME:IRODS_USER_IP"
-#    depends_on:
-#      - postgis
-#      - redis
-#      - solr
-#      - rabbitmq
-##      - irods-data
-##      - irods-users
-#    stdin_open: true
-#    tty: true
-#  defaultworker:
-#    # TODO https://docs.docker.com/compose/startup-order/
-#    build:
-#      context: .
-#      dockerfile: Dockerfile-defaultworker
-#    container_name: defaultworker
-#    hostname: defaultworker
-#    environment:
-#      POSTGIS_HOST: postgis
-#      POSTGIS_PORT: 5432
-#      REDIS_HOST: redis
-#      REDIS_PORT: 6379
-#      POSTGIS_PASSWORD: postgres
-#      POSTGIS_DB: postgres
-#      PGPASSWORD: postgres
-#      C_FORCE_ROOT: 1
-#      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
-#      SOLR_PORT_8983_TCP_ADDR: solr
-#      SOLR_HOST: solr
-#      POSTGIS_PORT_5432_TCP_ADDR: postgis
-#      HS_PATH: ${PWD}
-#      PYTHONPATH: /hydroshare
-#      DJANGO_SETTINGS_MODULE: hydroshare.settings
-#    volumes:
-#      - ".:/hydroshare"
-#      - "${LOGDIR}:/hydroshare/log"
-#    links:
-#      - postgis:postgis
-#      - redis:redis
-#      - rabbitmq:rabbitmq
-##      - irods-data:irods-data
-##      - irods-users:irods-users
-##    extra_hosts:
-##      - "IRODS_DATA_HOSTNAME:IRODS_DATA_IP"
-##      - "IRODS_USER_HOSTNAME:IRODS_USER_IP"
-#    depends_on:
-#      - hydroshare
-#      - postgis
-#      - solr
-#      - redis
-#      - rabbitmq
-##      - irods-data
-##      - irods-users
-#    stdin_open: true
-#    tty: true
-#
+  postgis:
+    build:
+      context: .
+      dockerfile: Dockerfile-postgis
+    container_name: postgis
+    hostname: postgis
+    volumes:
+      - "pgdatavol:/var/lib/postgresql/data"
+    ports:
+      - "54322:5432"
+    stdin_open: true
+    tty: true
+  rabbitmq:
+    image: rabbitmq:3.5
+    container_name: rabbitmq
+  redis:
+    image: redis:2.8
+    container_name: redis
+    stdin_open: true
+    tty: true
+  solr:
+    build:
+      context: .
+      dockerfile: Dockerfile-solr
+    container_name: solr
+    hostname: solr
+    ports:
+      - "8983:8983"
+    # This line is uncommented if $USE_LOCAL_IRODS = true per hsctrl
+    # - "8983"
+    stdin_open: true
+    tty: true
+  hydroshare:
+    build:
+      context: .
+      dockerfile: Dockerfile-hydroshare
+    container_name: hydroshare
+    hostname: hydroshare
+    devices:
+      - "/dev/fuse"
+    privileged: true
+    environment:
+      POSTGIS_HOST: postgis
+      POSTGIS_PORT: 5432
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      POSTGIS_PASSWORD: postgres
+      POSTGIS_DB: postgres
+      POSTGIS_USER: postgres
+      PGPASSWORD: postgres
+      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
+      SOLR_PORT_8983_TCP_ADDR: solr
+      SOLR_HOST: solr
+      TMP: /hs_tmp
+      POSTGIS_PORT_5432_TCP_ADDR: postgis
+      HS_PATH: ${PWD}
+      PYTHONPATH: /hydroshare
+      DJANGO_SETTINGS_MODULE: hydroshare.settings
+    volumes:
+      # hydroshare repository
+      - ".:/hydroshare"
+      # log files
+      - "${LOGDIR}:/hydroshare/log"
+      # shared location for gunicorn.sock between containers
+      - "/hs_tmp"
+      # temp directory shared with celery workers
+      - "/shared_tmp"
+      ## These two lines are actually active if $USE_LOCAL_IRODS = false: but can probably be removed entirely
+      ## These two lines are not present if $USE_LOCAL_IRODS = true
+      #- "/irods/hydroshare:/irods/hydroshare"
+      #- "/irods/hydroshare_vault:/irods/hydroshare_vault"
+    ports:
+      - "1338:2022"
+      - "8000:8000"
+      # this line is removed if irods $USE_LOCAL_IRODS = true not sure why
+      - "15001:15001"
+    links:
+      - postgis:postgis
+      - redis:redis
+      - solr:solr
+      - rabbitmq:rabbitmq
+      - data.local.org:data.local.org
+      - users.local.org:users.local.org
+    # This won't be necessary if irods is a container. Was just to have additional etc hosts entries for IPs of irods and the developer laptop or user IP I wonder if that is for whitelisting
+    depends_on:
+      - postgis
+      - redis
+      - solr
+      - rabbitmq
+      - data.local.org
+      - users.local.org
+    stdin_open: true
+    tty: true
+  defaultworker:
+    # TODO https://docs.docker.com/compose/startup-order/
+    build:
+      context: .
+      dockerfile: Dockerfile-defaultworker
+    container_name: defaultworker
+    hostname: defaultworker
+    environment:
+      POSTGIS_HOST: postgis
+      POSTGIS_PORT: 5432
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      POSTGIS_PASSWORD: postgres
+      POSTGIS_DB: postgres
+      PGPASSWORD: postgres
+      C_FORCE_ROOT: 1
+      RABBITMQ_PORT_5672_TCP_ADDR: rabbitmq
+      SOLR_PORT_8983_TCP_ADDR: solr
+      SOLR_HOST: solr
+      POSTGIS_PORT_5432_TCP_ADDR: postgis
+      HS_PATH: ${PWD}
+      PYTHONPATH: /hydroshare
+      DJANGO_SETTINGS_MODULE: hydroshare.settings
+    volumes:
+      - ".:/hydroshare"
+      - "${LOGDIR}:/hydroshare/log"
+    links:
+      - postgis:postgis
+      - redis:redis
+      - rabbitmq:rabbitmq
+      - data.local.org:data.local.org
+      - users.local.org:users.local.org
+    depends_on:
+      - hydroshare
+      - postgis
+      - solr
+      - redis
+      - rabbitmq
+      - data.local.org
+      - users.local.org
+    stdin_open: true
+    tty: true
 ### Docker Volumes https://docs.docker.com/storage/volumes/
 ### tldr;
 ### docker volume ps | grep pgdatavol
