--- a/conf_irods/env-files/use-local-irods.env
+++ b/conf_irods/env-files/use-local-irods.env
@@ -39,3 +39,6 @@ HS_WWW_IRODS_HOST='data.local.org'
 HS_IRODS_LOCAL_ZONE_DEF_RES='hydroshareLocalResc'
 HS_WWW_IRODS_ZONE='hydroshareZone'
 HS_USER_IRODS_ZONE='hydroshareuserZone'
+
+RUN_ON_DATA="docker exec --interactive data.local.org /bin/bash"
+RUN_ON_USER="docker exec --interactive users.local.org /bin/bash"
