Update for postgis simplification

--- a/Dockerfile-postgis
+++ b/Dockerfile-postgis
@@ -1,51 +1,3 @@
-FROM postgres:9.4.7
+FROM hydroshare/hs_postgres:9.5.0
 
-RUN mkdir -p /app
-
-ADD ./pg.development.sql /app/pg.development.sql
-
-# IPv6 listener disabled in pg_hba.conf
-ADD ./conf_postgres/pg_hba.conf /app/pg_hba.conf
-
-# listen_addresses = '*' set in postgresql.conf
-ADD ./conf_postgres/postgresql.conf /app/postgresql.conf
-
-# add keys may no longer be necessary
-RUN apt-get update && apt-get install -y \
-    sudo \
-    wget
-RUN sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt trusty-pgdg main" >> /etc/apt/sources.list'
-RUN wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
-
-RUN apt-get install -y \
-    postgresql-9.4-postgis-2.1 \
-    pgadmin3 \
-    postgresql-contrib-9.4
-RUN apt-get clean
-RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-EXPOSE 5432/tcp
-
-####TODO NEW STUFF:
-#RUN cp /docker-entrypoint.sh /usr/local/bin/
-#RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf && chown -R postgres /var/lib/postgresql/data/pg_hba.conf
-##CMD ["dbinit"] #gosu postgres initdb $POSTGRES_INITDB_ARGS
-##CMD ["marks_db_populate"]
-#CMD ["docker-entrypoint.sh", "postgres"]
-
-### TODO find permanent solution to reconcile mutually exclisive first-run setup and subsequently necessary docker-entrypoint.sh
-### COMMENT EVERYTHING BELOW THIS LINE FOR FIRST RUN TO INITIALIZE PGDATA THEN UNCOMMENT
-RUN cp /docker-entrypoint.sh /usr/local/bin/
-
-# enables USER postgres - https://success.docker.com/article/use-a-script-to-initialize-stateful-container-data
-# potential bug with native intended script??? https://github.com/docker-library/postgres/issues/269
-ENTRYPOINT ["docker-entrypoint.sh"]
-
-## open up listening to be most permissive
-RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf
-
-### Set the default command to run when starting the container
-USER postgres
-
-## /var/lib/postgresql/data/postgresql.conf and pg_hba.conf seem to regenerate so copying over them does not work
-CMD ["/usr/lib/postgresql/9.4/bin/postgres", "-D", "/var/lib/postgresql/data", "-c", "config_file=/app/postgresql.conf"]
+COPY ./pg.development.sql /app/pg.development.sql
