@hyi - iRODS 4.2.4 example code

--- a/irods/env-files/use-local-irods.env
+++ b/irods/env-files/use-local-irods.env
@@ -5,7 +5,7 @@ USE_IRODS=True
 IRODS_ROOT='/tmp'
 IRODS_ICOMMANDS_PATH='/usr/bin'
 IRODS_HOST='data.local.org'
-IRODS_PORT='1247'
+IRODS_PORT=1247
 IRODS_DEFAULT_RESOURCE='hydroshareReplResc'
 IRODS_HOME_COLLECTION='/hydroshareZone/home/wwwHydroProxy'
 IRODS_CWD='/hydroshareZone/home/wwwHydroProxy'
