--- a/alternate-compose.yml
+++ b/alternate-compose.yml
@@ -19,7 +19,7 @@ services:
       IRODS_PORT: '1247'
       IRODS_DEFAULT_RESOURCE: 'hydroshareReplResc'
       IRODS_HOME_COLLECTION: '/hydroshareZone/home/wwwHydroProxy'
-      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy'
+#      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy'
       IRODS_ZONE: 'hydroshareZone'
       IRODS_USERNAME: 'wwwHydroProxy'
       IRODS_AUTH: 'wwwHydroProxy'
@@ -63,7 +63,7 @@ services:
       IRODS_PORT: '1247'
       IRODS_DEFAULT_RESOURCE: 'hydroshareReplResc'
       IRODS_HOME_COLLECTION: '/hydroshareZone/home/wwwHydroProxy'
-      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy'
+#      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy'
       IRODS_ZONE: 'hydroshareZone'
       IRODS_USERNAME: 'wwwHydroProxy'
       IRODS_AUTH: 'wwwHydroProxy'
