--- a/hydroshare/local_settings.template
+++ b/hydroshare/local_settings.template
@@ -46,3 +46,9 @@ HS_WWW_IRODS_HOST='data.local.org'
 HS_IRODS_LOCAL_ZONE_DEF_RES='hydroshareLocalResc'
 HS_WWW_IRODS_ZONE='hydroshareZone'
 HS_USER_IRODS_ZONE='hydroshareuserZone'
+
+# Override these values for Prod or anywhere with NGINX and support for large files
+SENDFILE_ON = False
+IRODS_USER_URI = "/irods-user"
+IRODS_DATA_URI = "/irods-data"
+LOCAL_CACHE_URI = "/local-cache"
