--- a/hydroshare/local_settings.template
+++ b/hydroshare/local_settings.template
@@ -10,8 +10,10 @@ from kombu import Queue, Exchange
 DEBUG = True
 
 # Make these unique, and don't share it with anybody
-SECRET_KEY = "9e2e3c2d-8282-41b2-a027-de304c0bc3d944963c9a-4778-43e0-947c-38889e976dcab9f328cb-1576-4314-bfa6-70c42a6e773c"
-NEVERCACHE_KEY = "7b205669-41dd-40db-9b96-c6f93b66123496a56be1-607f-4dbf-bf62-3315fb353ce6f12a7d28-06ad-4ef7-9266-b5ea66ed2519"
+SECRET_KEY = \
+    "9e2e3c2d-8282-41b2-a027-de304c0bc3d944963c9a-4778-43e0-947c-38889e976dcab9f328cb-1576-4314-bfa6-70c42a6e773c"
+NEVERCACHE_KEY = \
+    "7b205669-41dd-40db-9b96-c6f93b66123496a56be1-607f-4dbf-bf62-3315fb353ce6f12a7d28-06ad-4ef7-9266-b5ea66ed2519"
 
 ALLOWED_HOSTS = "*"
 
@@ -39,26 +41,26 @@ WMS_CACHE_DB = redis.Redis(
     host=REDIS_HOST,
     port=REDIS_PORT,
     db=5)
-PERMISSIONS_DB= redis.Redis(
+PERMISSIONS_DB = redis.Redis(
     host=REDIS_HOST,
     port=REDIS_PORT,
     db=6)
 
-
-IPYTHON_SETTINGS=[]
-IPYTHON_BASE='/hydroshare/static/media/ipython-notebook'
-IPYTHON_HOST='127.0.0.1'
+IPYTHON_SETTINGS = []
+IPYTHON_BASE = '/hydroshare/static/media/ipython-notebook'
+IPYTHON_HOST = '127.0.0.1'
 
 # celery settings
 # customizations: we need a special queue for broadcast signals to all
 # docker daemons.  we also need a special queue for direct messages to all
 # docker daemons.
-BROKER_URL='amqp://guest:guest@{RABBITMQ_HOST}:{RABBITMQ_PORT}//'.format(RABBITMQ_HOST=RABBITMQ_HOST, RABBITMQ_PORT=RABBITMQ_PORT)
+BROKER_URL = 'amqp://guest:guest@{RABBITMQ_HOST}:{RABBITMQ_PORT}//'.format(RABBITMQ_HOST=RABBITMQ_HOST,
+                                                                           RABBITMQ_PORT=RABBITMQ_PORT)
 CELERY_ACCEPT_CONTENT = ['json']
 CELERY_TASK_SERIALIZER = 'json'
 CELERY_RESULT_SERIALIZER = 'json'
 CELERY_DEFAULT_QUEUE = 'default'
-DEFAULT_EXCHANGE=Exchange('default', type='topic')
+DEFAULT_EXCHANGE = Exchange('default', type='topic')
 
 CELERY_QUEUES = (
     Queue('default', DEFAULT_EXCHANGE, routing_key='task.default'),
@@ -71,16 +73,13 @@ CELERY_ROUTES = ('hs_core.router.HSTaskRouter',)
 DOCKER_URL = 'unix://docker.sock/'
 DOCKER_API_VERSION = '1.12'
 
-
 # CartoCSS
-CARTO_HOME='/hs_tmp/node_modules/carto'
-
+CARTO_HOME = '/hs_tmp/node_modules/carto'
 
 USE_SOUTH = False
 SITE_TITLE = "CUAHSI HydroShare"
 
 SESSION_EXPIRE_AT_BROWSER_CLOSE = True
-
 
 #############
 # DATABASES #
@@ -102,30 +101,29 @@ DATABASES = {
         "PORT": POSTGIS_PORT,
     }
 }
-POSTGIS_VERSION=(2,1,1)
+POSTGIS_VERSION = (2, 1, 1)
 
-
-SHARED_NEG_KEY='hydroshareZonehydroshareuserZone'
+SHARED_NEG_KEY = 'hydroshareZonehydroshareuserZone'
 
 # Native Docker iRODS developer local
-USE_IRODS=True
-IRODS_ROOT='/tmp'
-IRODS_ICOMMANDS_PATH='/usr/bin'
-IRODS_HOST='data.local.org'
-IRODS_PORT='1247'
-IRODS_DEFAULT_RESOURCE='hydroshareReplResc'
-IRODS_HOME_COLLECTION='/hydroshareZone/home/wwwHydroProxy'
-IRODS_CWD='/hydroshareZone/home/wwwHydroProxy'
-IRODS_ZONE='hydroshareZone'
-IRODS_USERNAME='wwwHydroProxy'
-IRODS_AUTH='wwwHydroProxy'
-IRODS_GLOBAL_SESSION=True
+USE_IRODS = True
+IRODS_ROOT = '/tmp'
+IRODS_ICOMMANDS_PATH = '/usr/bin'
+IRODS_HOST = 'data.local.org'
+IRODS_PORT = '1247'
+IRODS_DEFAULT_RESOURCE = 'hydroshareReplResc'
+IRODS_HOME_COLLECTION = '/hydroshareZone/home/wwwHydroProxy'
+IRODS_CWD = '/hydroshareZone/home/wwwHydroProxy'
+IRODS_ZONE = 'hydroshareZone'
+IRODS_USERNAME = 'wwwHydroProxy'
+IRODS_AUTH = 'wwwHydroProxy'
+IRODS_GLOBAL_SESSION = True
 
 # Remote user zone iRODS configuration
-REMOTE_USE_IRODS=True
+REMOTE_USE_IRODS = True
 
 # iRODS customized bagit rule path
-IRODS_BAGIT_RULE='hydroshare/irods/ruleGenerateBagIt_HS.r'
+IRODS_BAGIT_RULE = 'hydroshare/irods/ruleGenerateBagIt_HS.r'
 IRODS_BAGIT_PATH = 'bags'
 IRODS_BAGIT_POSTFIX = 'zip'
 
@@ -149,41 +147,41 @@ HYRAX_SSH_PROXY_USER_PWD = ''
 HYRAX_SCRIPT_RUN_COMMAND = ''
 
 # hsuserproxy system user configuration used to create hydroshare iRODS users on-demand
-HS_USER_ZONE_HOST='users.local.org'
-HS_USER_ZONE_PROXY_USER='hsuserproxy'
-HS_USER_ZONE_PROXY_USER_PWD='hsuserproxy'
-HS_USER_ZONE_PROXY_USER_CREATE_USER_CMD='/home/hsuserproxy/create_user.sh'
-HS_USER_ZONE_PROXY_USER_DELETE_USER_CMD='/home/hsuserproxy/delete_user.sh'
+HS_USER_ZONE_HOST = 'users.local.org'
+HS_USER_ZONE_PROXY_USER = 'hsuserproxy'
+HS_USER_ZONE_PROXY_USER_PWD = 'hsuserproxy'
+HS_USER_ZONE_PROXY_USER_CREATE_USER_CMD = '/home/hsuserproxy/create_user.sh'
+HS_USER_ZONE_PROXY_USER_DELETE_USER_CMD = '/home/hsuserproxy/delete_user.sh'
 
 # the local HydroShare proxy user (a counterpart of wwwHydroProxy) in a federated zone with HydroShare Zone
-HS_LOCAL_PROXY_USER_IN_FED_ZONE='localHydroProxy'
+HS_LOCAL_PROXY_USER_IN_FED_ZONE = 'localHydroProxy'
 
 # Please keep the line below unchanged since it is used to check whether
 # the current site is in production or not
-HS_WWW_IRODS_PROXY_USER='wwwHydroProxy'
+HS_WWW_IRODS_PROXY_USER = 'wwwHydroProxy'
 # credentials for HydroShare proxy user iRODS account which is set to have own access control
 # to all collections in any federated zone with HydroShare zone, which is only useful when
 # testing HydroShare federated zone in local test development environment since in www
 # production environment, IRODS_USERNAME and other associated settings already represent wwwHydroProxy settings
-HS_WWW_IRODS_PROXY_USER_PWD='wwwHydroProxy'
-HS_WWW_IRODS_HOST='data.local.org'
-HS_IRODS_LOCAL_ZONE_DEF_RES='hydroshareLocalResc'
-HS_WWW_IRODS_ZONE='hydroshareZone'
-HS_USER_IRODS_ZONE='hydroshareuserZone'
+HS_WWW_IRODS_PROXY_USER_PWD = 'wwwHydroProxy'
+HS_WWW_IRODS_HOST = 'data.local.org'
+HS_IRODS_LOCAL_ZONE_DEF_RES = 'hydroshareLocalResc'
+HS_WWW_IRODS_ZONE = 'hydroshareZone'
+HS_USER_IRODS_ZONE = 'hydroshareuserZone'
 
 # Email configuration
 EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
-#EMAIL_HOST_USER = ''
-#EMAIL_HOST_PASSWORD = ''
-#EMAIL_HOST = ''
-#EMAIL_PORT = ''
-#EMAIL_USE_TLS = True
-#DEFAULT_FROM_EMAIL = ''
-#DEFAULT_SUPPORT_EMAIL=''
+# EMAIL_HOST_USER = ''
+# EMAIL_HOST_PASSWORD = ''
+# EMAIL_HOST = ''
+# EMAIL_PORT = ''
+# EMAIL_USE_TLS = True
+# DEFAULT_FROM_EMAIL = ''
+# DEFAULT_SUPPORT_EMAIL=''
 
 HYDROSHARE_SHARED_TEMP = '/shared_tmp'
 
-#used by the mailchimp subscription job in hs_core/tasks.py
+# used by the mailchimp subscription job in hs_core/tasks.py
 MAILCHIMP_ACTIVE_SUBSCRIBERS = "e210a70864"
 MAILCHIMP_SUBSCRIBERS = "f0c27254e3"
 
@@ -194,14 +192,10 @@ IRODS_USER_URI = "/irods-user"
 IRODS_DATA_URI = "/irods-data"
 LOCAL_CACHE_URI = "/local-cache"
 
-RECAPTCHA_SITE_KEY="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
-RECAPTCHA_SECRET_KEY="6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
-RECAPTCHA_VERIFY_URL='https://www.google.com/recaptcha/api/siteverify'
+# Needed for deployments to non-dev environments
+RECAPTCHA_SITE_KEY = "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
+RECAPTCHA_SECRET_KEY = "6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
+RECAPTCHA_VERIFY_URL = 'https://www.google.com/recaptcha/api/siteverify'
 
-with open(os.path.dirname(os.path.abspath(__file__))  + "/../config/hydroshare-config.yaml", 'r') as stream:
-    try:
-        EXTERNAL_CONFIG = yaml.load(stream)
-    except yaml.YAMLError as exc:
-        print(exc)
 # insert a google maps key here when in production
-MAPS_KEY= ''
+MAPS_KEY = ''
