--- a/hydroshare/local_settings.template
+++ b/hydroshare/local_settings.template
@@ -190,3 +190,4 @@ HSWS_URL = "http://10.37.142.23:8060/his/services/update"
 HSWS_API_TOKEN = "d1caabf3059ef7ffd99d890aba57100da2e0efc8"
 HSWS_TIMEOUT = 3
 HSWS_PUBLISH_URLS = False
+HSWS_ACTIVATED = False
