Change repo for pg image for builds and update local settings template with useful tips

--- a/hydroshare/local_settings.template
+++ b/hydroshare/local_settings.template
@@ -182,7 +182,8 @@ RECAPTCHA_SITE_KEY = "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
 RECAPTCHA_SECRET_KEY = "6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
 RECAPTCHA_VERIFY_URL = 'https://www.google.com/recaptcha/api/siteverify'
 
-# insert a google maps key here when in production
+# Insert a google maps key here when in production
+# On local device google maps will show error in resource view since API key is blank here
 MAPS_KEY = ''
 
 # HydroShare web services settings
@@ -191,3 +192,16 @@ HSWS_API_TOKEN = "d1caabf3059ef7ffd99d890aba57100da2e0efc8"
 HSWS_TIMEOUT = 3
 HSWS_PUBLISH_URLS = False
 HSWS_ACTIVATED = False
+
+# Uncomment the following code if you want to suppress some warnings on a local laptop
+# TIME_ZONE = 'Etc/UTC'
+# USE_TZ = False
+
+"""
+Silence ForeignKey Warnings:
+hs_tracking.Visitor.user:(fields.W342) Setting unique=True on a ForeignKey has the same effect as using a OneToOneField.
+hydroshare | HINT: ForeignKey(unique=True) is usually better served by a OneToOneField.
+hydroshare | security.PasswordExpiry.user: (fields.W342) Setting unique=True on a ForeignKey has the same effect as
+using a OneToOneField.
+"""
+# SILENCED_SYSTEM_CHECKS = ["mezzanine.core.W03", "fields.W342"]
