Tell nose to ignore pytest

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = hydroshare/settings.py
-python_files = test/functional/test*
+python_files = pytest/functional*
 filterwarnings =
     ignore::DeprecationWarning
