--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ __pycache__/
 .idea
 /celery
 /config/hydroshare-config.sh
+/config/hydroshare-config.yaml
 /hydroshare/static
 /log
 /nginx/.htpasswd
