Add nginx/Dockerfile-nginx into .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ __pycache__/
 /nginx/.htpasswd
 /nginx/htpasswd
 /nginx/Dockerfile
+nginx/Dockerfile-nginx
 /nginx/config-files/hs-nginx.conf
 /nginx/config-files/nginx.conf-default
 /static
