--- a/local-dev.yml
+++ b/local-dev.yml
@@ -21,7 +21,6 @@ services:
       IRODS_PORT: '1247'
       IRODS_DEFAULT_RESOURCE: 'hydroshareReplResc'
       IRODS_HOME_COLLECTION: '/hydroshareZone/home/wwwHydroProxy'
-#      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy' breaking change for 4.1.8 to 4.2.4
       IRODS_ZONE: 'hydroshareZone'
       IRODS_USERNAME: 'wwwHydroProxy'
       IRODS_AUTH: 'wwwHydroProxy'
@@ -63,7 +62,6 @@ services:
       IRODS_PORT: '1247'
       IRODS_DEFAULT_RESOURCE: 'hydroshareReplResc'
       IRODS_HOME_COLLECTION: '/hydroshareZone/home/wwwHydroProxy'
-#      IRODS_CWD: '/hydroshareZone/home/wwwHydroProxy' breaking change for 4.1.8 to 4.2.4
       IRODS_ZONE: 'hydroshareZone'
       IRODS_USERNAME: 'wwwHydroProxy'
       IRODS_AUTH: 'wwwHydroProxy'
@@ -113,10 +111,29 @@ services:
       - "8983:8983"
     stdin_open: true
     tty: true
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile-nginx
+    hostname: nginx
+    container_name: nginx
+    links:
+      - hydroshare:hydroshare
+    depends_on:
+      - hydroshare
+    ports:
+      - "80:80"
+    volumes:
+      - "./log/nginx:/var/log/nginx"
+      - ".:/hydroshare"
+      - "temp_vol:/hs_tmp"
+      - "share_vol:/irods/cache"
+      - "idata_vault_vol:/irods/data"
+      - "iuser_vault_vol:/irods/user"
   hydroshare:
     build:
       context: .
-      dockerfile: Dockerfile-hydroshare
+      dockerfile: Dockerfile
     container_name: hydroshare
     hostname: hydroshare
     devices:
@@ -161,10 +178,11 @@ services:
       - users.local.org
     stdin_open: true
     tty: true
+    command: /bin/bash init-hydroshare
   defaultworker:
     build:
       context: .
-      dockerfile: Dockerfile-defaultworker
+      dockerfile: Dockerfile
     container_name: defaultworker
     hostname: defaultworker
     environment:
@@ -197,10 +215,7 @@ services:
       - users.local.org
     stdin_open: true
     tty: true
-### Docker Volumes https://docs.docker.com/storage/volumes/
-### tldr;
-### docker volume ps | grep pgdatavol
-### docker volume rm hydroshare_pgdatavol
+    command: /bin/bash init-defaultworker
 volumes:
   idata_iconf_vol:
   idata_vault_vol:
